--- a/index.html
+++ b/index.html
@@ -17,29 +17,13 @@
     <main class="container">
       <video class="movie">
         <source src="./assets/BigBuckBunny.mp4" />
+     
       </video>
 
       <button id="playButton">Play/Pause</button>
     </main>
 
-    <script>
-        const video  = document.querySelector("video");
-        const button = document.querySelector("button");
-
-        function MediaPlayer(config)
-        {
-            this.media = config.el
-        }
-
-        MediaPlayer.prototype.play = function()
-        {
-            this.media.paused ? this.media.play() : this.media.pause();
-        }
-
-        const player = new MediaPlayer({ el: video});
-        button.onclick = () => player.play();
-
-    </script>
+    <script type="module" src="./assets/index.js"></script>
 
   </body>
 </html>
