--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <main class="container">
       <video class="movie">
         <source src="./assets/BigBuckBunny.mp4" />
-     
       </video>
 
       <button id="playButton">Play/Pause</button>
+      <button id="muteButton">Mute/UnMute</button>
     </main>
 
     <script type="module" src="./assets/index.js"></script>
