the project was changed to typescript

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Whether you're using the viewport or some other element as the root, the API wor
 The degree of intersection between the target element and its root is the intersection ratio. This is a representation of the percentage of the target element which is visible as a value between 0.0 and 1.0.
     </p>
 
-    <script type="module" src="./assets/index.js"></script>
+    <script type="module" src="./assets/index.ts"></script>
 
   </body>
 </html>
